Style of cast show page

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -24,6 +24,5 @@
 @import "04-search-and-filter/filter-bar";
 @import "05-dramas/dramas-index";
 @import "05-dramas/drama-show";
-
-
-// @import "07-users/user";
+@import "07-users/user-bar";
+@import "07-users/user-page";
