--- a/app/assets/templates/user-show.html
+++ b/app/assets/templates/user-show.html
@@ -3,10 +3,10 @@
   	<div id="user-info">
   	  <i class="fa fa-user fa-2x user-icon"></i><span name-user user-id="user.profile.id"></span>
   	  <div ng-if="user.currentUser && !user.authorized()" class="relationship">
-  	    <md-button class="alter-relationship" ng-if="!user.relationshipId" ng-click="user.follow()"><i class="fa fa-plus fa-1x"></i></md-button>
-  	    <md-button class="alter-relationship" ng-if="user.relationshipId" ng-click="user.unfollow()"><i class="fa fa-minus fa-1x"></i></md-button>
+  	    <button class="alter-relationship" ng-if="!user.relationshipId" ng-click="user.follow()"><i class="fa fa-plus fa-1x"></i></button>
+  	    <button class="alter-relationship" ng-if="user.relationshipId" ng-click="user.unfollow()"><i class="fa fa-minus fa-1x"></i></button>
   	  </div>
     </div>
-  </div>             
+  </div>
   <div ui-view></div>
 </div>
