--- a/app/assets/templates/drama-show.html
+++ b/app/assets/templates/drama-show.html
@@ -1,12 +1,12 @@
 <section>
   <div class="row">
     <div class="hide-for-small-only large-2 columns">&nbsp;</div>
-    <div class="small-12 large-8 columns" id="headline_div">
-      <div id="pic_div" class="small-12 large-8 columns">
+    <div class="small-12 large-8 columns headline_div">
+      <div class="small-12 large-8 columns pic_div">
         <img src="{{drama.image_url}}" alt="{{drama.poster_file_name}}">
         <div id="slash_div" class=""></div>
       </div>
-      <div id="end_div" class="small-12 large-4 columns">
+      <div class="small-12 large-4 columns stats_div">
         <span class="drama-info"><h1>{{drama.name}}</h1></span>
         <p>{{drama.country}}</p>
         <p>
