--- a/app/assets/templates/lists-index.html
+++ b/app/assets/templates/lists-index.html
@@ -1,4 +1,15 @@
-<div>
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div>
   <h2>Favorites Bar</h2>
 
   <div id="fav_list" gridster= "lists.gridsterFavListOpts">
@@ -58,4 +69,4 @@
       </md-content>
     </div>
   </div>
-</div>
+</div> -->
