--- a/app/assets/stylesheets/07-users/user-page.scss
+++ b/app/assets/stylesheets/07-users/user-page.scss
@@ -1,3 +1,22 @@
+.user-nav {
+  position: fixed;
+  padding:0;
+  margin:0;
+  display: inline-block;
+  top: 100px;
+  background: #222;
+  color: $ds-off-white;
+  height: 100vh;
+  z-index:3;
+  
+  li {
+    list-style:none;
+  }
+}
+
+.user-content{
+  float: right;
+}
 
 #fav_list{
   background-color:#fff2e5;
