--- a/app/assets/templates/user-show.html
+++ b/app/assets/templates/user-show.html
@@ -11,5 +11,16 @@
     </div>
     <div class="hide-for-small-only large-1 column"></div>
   </div>
-  <div ui-view></div>
+</div>
+<div class="row">
+  <div class="large-1 columns user-nav">
+    <article class="">
+      <ul class="side-nav">
+        <li role="menuitem"><a ui-sref="user.lists">STASH</a></li>
+        <li role="menuitem"><a ui-sref="user.fav_list">Top 5</a></li>
+        <li role="menuitem" ng-repeat="list in user.lists"><a ui-sref="user.list({listID: list.id})">{{list.name}}</li>
+      </ul>
+    </article>
+  </div>
+    <div class="large-11 columns user-content" ui-view></div>
 </div>
