--- a/app/assets/templates/user-show.html
+++ b/app/assets/templates/user-show.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="large-1 columns user-nav">
+  <div class="medium-2 large-1 columns user-nav hide-for-small-only">
     <article class="">
       <ul class="side-nav">
         <li role="menuitem"><a ui-sref="user.lists">STASH</a></li>
@@ -22,5 +22,5 @@
       </ul>
     </article>
   </div>
-    <div class="large-11 columns user-content" ui-view></div>
+    <div class="medium-10 large-11 columns user-content" ui-view></div>
 </div>
