--- a/app/assets/stylesheets/07-users/user-page.scss
+++ b/app/assets/stylesheets/07-users/user-page.scss
@@ -4,13 +4,26 @@
   margin:0;
   display: inline-block;
   top: 100px;
-  background: #222;
+  background: #3F4652;
   color: $ds-off-white;
   height: 100vh;
   z-index:3;
-  
+  ul{
+    padding: 10px;
+    margin: 0;
+  }
   li {
+    padding: 0;
+    margin: 0;
     list-style:none;
+  }
+  a {
+    color: lighten(#6E737C, 25%);
+    line-height: 2.5em;
+  }
+  a:hover{
+    color: $ds-off-white;
+    text-decoration: none;
   }
 }
 
