--- a/app/assets/templates/dramas-index.html
+++ b/app/assets/templates/dramas-index.html
@@ -1,4 +1,4 @@
-<div id="browse-page">
+<div id="browse-page" class="push_down">
 <div class="row">
   <div class="search-filter small-12 large-5 columns">
     <dramas-filter  items="dramas.items" total-dramas="dramas.totalDramas"></dramas-filter>
