--- a/app/assets/templates/list-show.html
+++ b/app/assets/templates/list-show.html
@@ -1,4 +1,4 @@
-<div>
+<div class="push_down">
   <div ng-if="list.authorized()">
     <h3 editable-text="list.name" onaftersave="list.updateName(list.name)">{{list.name}}</h3>
     <h4>
@@ -10,29 +10,18 @@
     <h3> {{list.name}} </h3>
     <h4> {{list.description}} </h4>
   </div>
-  <div gridster= "list.gridsterOpts">
-    <div gridster-item="items" ng-repeat= "drama in list.items" ng-cloak>
-      <md-content layout="row" layout-wrap layout-align="center start" layout-xs="column">
-        <div flex-xs="100" layout="column">
-          <md-card>
-            <a ui-sref="drama({dramaID: drama.id})">
-              <img src="{{drama.image_url}}" alt="{{drama.poster_file_name}}">
-            </a>
-            <md-card-title>
-              <md-card-title-text>
-                <a ui-sref="drama({dramaID: drama.id})">
-                  {{drama.name}}
-                </a>
-                {{drama.release_date}}
-              </md-card-title-text>
-            </md-card-title>
-            <md-card-actions layout="row" layout-align="end center" ng-if="list.authorized()">
-              <add-drama drama="drama" user="{{list.userID}}" user-lists="list.userLists" selected-list="list.selectedList"> </add-drama>
-              <delete-drama drama="drama" remove-item= "list.removeItem(drama)" list="{{list.id}}" user="{{list.userID}}"> </delete-drama>
-            </md-card-actions>
-          </md-card>
-        </div>
-      </md-content>
+  <div class="row small-up-1 medium-up-3 large-up-4">
+    <div ng-repeat= "drama in list.items" class="column" ng-cloak>
+      <a ui-sref="drama({dramaID: drama.id})">
+        <span class="full-image"><img src="{{drama.image_url}}" alt="{{drama.poster_file_name}}"></span>
+      </a>
+      <a ui-sref="drama({dramaID: drama.id})">
+       {{drama.name}}
+      </a>
+      <div ng-if="list.authorized()">
+        <add-drama drama="drama" user="{{list.userID}}" user-lists="list.userLists" selected-list="list.selectedList"> </add-drama>
+        <delete-drama drama="drama" remove-item= "list.removeItem(drama)" list="{{list.id}}" user="{{list.userID}}"> </delete-drama>
+      </div>
     </div>
   </div>
 </div>
