--- a/app/assets/stylesheets/05-dramas/drama-show.scss
+++ b/app/assets/stylesheets/05-dramas/drama-show.scss
@@ -1,3 +1,9 @@
+#drama_show {
+  position: absolute;
+  margin-top: 100px;
+  width: 100%;
+}
+
 .cast_section {
   background: $ds-lgt-grey;
   max-height: inherit;
