--- a/app/assets/stylesheets/06-casts/cast-show.scss
+++ b/app/assets/stylesheets/06-casts/cast-show.scss
@@ -1,3 +1,9 @@
+#cast_show {
+  position: absolute;
+  margin-top: 100px;
+  width: 100%;
+}
+
 #drama-roll{
   margin-top: 3%;
   margin-bottom: 3%;
