--- a/app/assets/templates/cast-show.html
+++ b/app/assets/templates/cast-show.html
@@ -1,4 +1,4 @@
-<section>
+<section id="cast_show">
   <div class="row">
 
     <div class="hide-for-small-only medium-1 large-2 columns">&nbsp;</div>
