--- a/app/assets/templates/drama-show.html
+++ b/app/assets/templates/drama-show.html
@@ -1,4 +1,4 @@
-<section>
+<section id="drama_show">
   <div class="row">
     <div class="hide-for-small-only large-2 columns">&nbsp;</div>
     <div class="small-12 large-8 columns headline_div">
