--- a/app/assets/stylesheets/07-users/user-page.scss
+++ b/app/assets/stylesheets/07-users/user-page.scss
@@ -37,6 +37,7 @@
   // background: -moz-linear-gradient(right, $ds-lgt-orange, $ds-orange); /* For Firefox 3.6 to 15 */
   // background: linear-gradient(to right,$ds-lgt-orange, $ds-orange); /* Standard syntax */
   height: 100vh;
+  border: 1px red solid;
 }
 
 #fav_list{
