--- a/app/assets/templates/list-show.html
+++ b/app/assets/templates/list-show.html
@@ -21,12 +21,12 @@
       </div>
       <div class="content">
         <span class="drama-title"> {{drama.name}} </span>
-        <p>Review</p>
+        <get-review drama="drama" user-id="{{list.userID}}"></get-review>
       </div>
       <div ng-if="list.authorized()">
         <add-drama drama="drama" user="{{list.userID}}" user-lists="list.userLists" selected-list="list.selectedList"> </add-drama>
         <delete-drama drama="drama" remove-item= "list.removeItem(drama)" list="{{list.id}}" user="{{list.userID}}"> </delete-drama>
-      </div>  
+      </div>
     </div>
   </div>
 </div>
