--- a/app/assets/templates/user-show.html
+++ b/app/assets/templates/user-show.html
@@ -16,9 +16,9 @@
   <div class="medium-2 large-1 columns user-nav hide-for-small-only">
     <article class="">
       <ul class="side-nav">
-        <li role="menuitem"><a ui-sref="user.lists">STASH</a></li>
-        <li role="menuitem"><a ui-sref="user.fav_list">Top 5</a></li>
-        <li role="menuitem" ng-repeat="list in user.lists"><a ui-sref="user.list({listID: list.id})">{{list.name}}</a></li>
+        <li role="menuitem"><a ui-sref="user.lists">STASHES</a></li>
+        <li role="menuitem"><a ui-sref="user.fav_list">&nbsp; Top 5</a></li>
+        <li role="menuitem" ng-repeat="list in user.lists"><a ui-sref="user.list({listID: list.id})">&nbsp; {{list.name}}</a></li>
       </ul>
     </article>
   </div>
