--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -19,6 +19,7 @@
 // @import "01-elements/xeditable";
 // @import "01-elements/tabs";
 @import "01-elements/add-drama";
+@import "01-elements/nudges";
 @import "01-elements/toast";
 @import "03-home/index";
 @import "04-search-and-filter/filter-bar";
@@ -28,3 +29,4 @@
 @import "07-users/user-bar";
 @import "07-users/user-page";
 @import "08-lists/list-show";
+@import "08-lists/lists-index";
