--- a/app/assets/templates/add-list.html
+++ b/app/assets/templates/add-list.html
@@ -1,9 +1,9 @@
 <div class="modal-content">
   <div class="modal-header">
     <button type="button" class="close" ng-click="cancel()" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h4 class="modal-title">Add List</h4>
+    <h4 class="modal-title">Add A Stash</h4>
   </div>
-  
+
   <div class="modal-body">
     <form name="addListForm" role="form" ng-submit="close()" novalidate>
       <div class="form-group" ng-class="{ 'has-error' : addListForm.name.$invalid && !addListForm.name.$pristine }">
@@ -12,16 +12,13 @@
         <p ng-show="addListForm.name.$error.minlength" class="help-block">Name is too short.</p>
         <p ng-show="addListForm.name.$error.maxlength" class="help-block">Name is too long.</p>
       </div>
-  
+
       <label for="description">Description</label>
       <textarea ng-model="description" placeholder=""></textarea>
     </form>
   </div>
- 
+
   <div class="modal-footer">
     <button type="button" ng-click="close()" ng-disabled="addListForm.$invalid" class="btn btn-primary">Create</button>
-  </div>	
+  </div>
 </div>
-
-
-
