--- a/app/assets/templates/warning-template.html
+++ b/app/assets/templates/warning-template.html
@@ -2,6 +2,6 @@
   <h3 class="modal-title">Are you sure about this?</h3>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" type="button" ng-click="ok()">Yup</button>
-  <button class="btn btn-warning" type="button" ng-click="cancel()">Nah</button>
+  <button class="btn btn-primary" type="button" ng-click="ok()">Yes</button>
+  <button class="btn btn-warning" type="button" ng-click="cancel()">No</button>
 </div>
