Add search results stylesheet

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -23,6 +23,7 @@
 @import "01-elements/toast";
 @import "03-home/index";
 @import "04-search-and-filter/filter-bar";
+@import "04-search-and-filter/search-results";
 @import "05-dramas/dramas-index";
 @import "05-dramas/drama-show";
 @import "06-casts/cast-show";
