--- a/app/assets/stylesheets/04-search-and-filter/search-results.scss
+++ b/app/assets/stylesheets/04-search-and-filter/search-results.scss
@@ -1,3 +1,68 @@
 #search_results{
+  position: absolute;
+  margin-top: 50px;
+  width: 100%;
+  padding: 1em;
+  border: 1px solid red;
   background-image: linear-gradient($ds-orange, $ds-off-white);
+  min-height: 100vh;
+  p{
+    font-size: large;
+  }
+
+  .search-cards {
+    margin: 1rem auto;
+    list-style: none;
+    text-align: center;
+    .card {
+      position: relative;
+      a {
+        cursor: pointer;
+      }
+      .card-image {
+        max-width: 90%;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        img {
+          max-width: 100%;
+          position: static;
+          box-shadow: 0 17px 10px -10px rgba(0, 0, 0, 0.4);
+          transition: all ease-in-out 300ms;
+        }
+      }
+      .card-image:hover{
+        box-shadow: 0 37px 20px -20px rgba(0, 0, 0, 0.2);
+        transform: translate(0px, -2px);
+      }
+      .drama_card_name {
+        padding-top: 10px;
+      }
+      .title {
+        color: darken($ds-grey,10%);
+      }
+    }
+    .card:hover .title{
+      color: black;
+      transform: translate(0px, -2px);
+    }
+  }
+
+}
+#users-results {
+  padding: 2em;
+
+}
+
+#casts-results {
+  padding: 2em;
+  border-top: .5em solid;
+  border-color: rgba(253, 219, 204, .5);
+}
+
+#dramas-results {
+  padding: 2em;
+  border-top: .5em solid;
+  border-color: rgba(253, 219, 204, .5);
+
 }
