Add pagination controls

--- a/app/assets/templates/search-results.html
+++ b/app/assets/templates/search-results.html
@@ -16,11 +16,10 @@
     <div ng-if="!search.casts">
       <p> No performers found. </p>
     </div>
-    <div ng-if="search.casts" class="row small-up-2 medium-up-4 large-up-5">
+    <div ng-if="search.casts" class="row small-up-2 medium-up-3 large-up-4">
       <h3>Performers</h3>
         <div class="column search-cards"
-        dir-paginate= "cast in search.casts | itemsPerPage: search.pageSize"
-        current-page="search.currentPage"
+        dir-paginate= "cast in search.casts | itemsPerPage:12"
         pagination-id="casts" ng-cloak>
           <div class="card">
             <div class="card-image">
@@ -36,16 +35,16 @@
           </div>
         </div>
     </div>
+    <dir-pagination-controls pagination-id="casts"></dir-pagination-controls>
   </div>
 
   <div id="dramas-results">
     <div ng-if="!search.dramas">
       <p>No dramas found.</p>
     </div>
-    <div ng-if="search.dramas" class="row small-up-2 medium-up-4 large-up-5">
+    <div ng-if="search.dramas" class="row small-up-2 medium-up-3 large-up-4">
       <h3>Dramas</h3>
-      <div dir-paginate= "drama in search.dramas | itemsPerPage: search.pageSize"
-            current-page="search.currentPage"
+      <div dir-paginate= "drama in search.dramas | itemsPerPage: 12"
             class="column search-cards"
             pagination-id="dramas" ng-cloak>
         <div class="card">
