--- a/app/assets/templates/search-results.html
+++ b/app/assets/templates/search-results.html
@@ -35,7 +35,9 @@
           </div>
         </div>
     </div>
-    <dir-pagination-controls pagination-id="casts"></dir-pagination-controls>
+    <div class="search-pagination-controls">
+      <dir-pagination-controls pagination-id="casts"></dir-pagination-controls>
+    </div>
   </div>
 
   <div id="dramas-results">
