--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,4 +1,4 @@
-
+<div id="home_page">
 <div ng-controller="IndexCtrl as index">
   <div class="home-loggedout" ng-if="!index.user">
     <div class="row">
@@ -48,17 +48,28 @@
         </form>
         </div>
       </div>
+  </div>
 
   <div class="home-loggedin" ng-if="index.user">
-  	<div class="feed" ng-if="index.activities.length > 0">
-  	  <h3>Feed</h3>
-      <ul ng-repeat="activity in index.activities">
-	    <li feed-item activity="activity"></li>
-	  </ul>
-	</div>
-  	<div>
-  	  <h1>Featured Collections</h1>
-  	</div>
+    <div class="row">
+    	<div class="feed small-12 large-6 columns" ng-if="index.activities.length > 0">
+    	  <h3>Feed</h3>
+        <ul ng-repeat="activity in index.activities">
+  	      <li feed-item activity="activity"></li>
+  	    </ul>
+  	  </div>
+      <div class="small-12 large-6 columns">&nbsp;</div>
+    </div>
+  	<div class="row">
+      <div class="small-12 columns">
+  	    <h1>Featured Collections</h1>
+        <div><h2>Latest</h2></div>
+        <div><h2>Where to Start</h2></div>
+        <div><h2>Sure Bets</h2></div>
+        <div><h2>Emotional Rollercoasters</h2></div>
+      </div>
+    </div>
   </div>
+</div>
 
 </div>
