--- a/app/assets/templates/login.html
+++ b/app/assets/templates/login.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3">
+<div class="col-md-6 col-md-offset-3 pinch_down">
   <h2>Login</h2>
   <div ng-if="login.error" role="alert">{{login.error}}</div>
   <form name="loginForm" role="form" ng-submit="login.onSubmit()" novalidate>
@@ -8,21 +8,17 @@
       <p ng-show="loginForm.username.$error.minlength" class="help-block">Username is too short.</p>
       <p ng-show="loginForm.username.$error.maxlength" class="help-block">Username is too long.</p>
     </div>
-    
+
     <div class="form-group" ng-class="{ 'has-error' : loginForm.password.$invalid && !loginForm.password.$pristine }">
       <label for="password">Password</label>
       <input type="password" name="password" class="form-control" ng-model="login.user.password" ng-minlength="6" ng-maxlength="20" required />
       <p ng-show="loginForm.password.$error.minlength" class="help-block">Password is too short.</p>
       <p ng-show="loginForm.password.$error.maxlength" class="help-block">Password is too long.</p>
     </div>
-    
+
     <div>
       <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-primary">Login</button>
       <a href="#/register" class="btn btn-link">Register</a>
     </div>
   </form>
 </div>
-
-
-
-      
