--- a/app/assets/templates/login.html
+++ b/app/assets/templates/login.html
@@ -18,7 +18,7 @@
 
     <div>
       <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-primary">Login</button>
-      <a href="#/register" class="btn btn-link">Register</a>
+      <a ui-sref="register" class="btn btn-link">Register</a>
     </div>
   </form>
 </div>
