Style login form

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -22,6 +22,7 @@
 @import "01-elements/nudges";
 @import "01-elements/toast";
 @import "02-register-login/register";
+@import "02-register-login/login";
 @import "03-home/index";
 @import "04-search-and-filter/filter-bar";
 @import "04-search-and-filter/search-results";
