--- a/app/assets/stylesheets/02-register-login/login.scss
+++ b/app/assets/stylesheets/02-register-login/login.scss
@@ -1,9 +1,8 @@
-#sign_up {
+#login {
   min-height: 100vh;
   min-width: 100%;
   background-color: $ds-lgt-orange;
   background-image: linear-gradient($ds-orange, $ds-off-white);
-
   .row {
     max-width: 90%;
   }
@@ -12,13 +11,11 @@
     font-family: 'Roboto Slab', sans-serif;
     color: $ds-lgt-grey;
   }
-
-  .sign_up_form {
+  .login_form{
     color: $ds-off-white;
     // border: 1px solid $ds-off-white;
     background-color: lighten($ds-orange, 15%);
     font-family: 'Roboto Condensed', sans-serif;
     padding: 2em;
   }
-
 }
