--- a/app/assets/templates/login.html
+++ b/app/assets/templates/login.html
@@ -1,5 +1,11 @@
-<div class="col-md-6 col-md-offset-3 pinch_down">
-  <h2>Login</h2>
+<div id="login" class=" pinch_down">
+  <div class="row">
+    <h1 class="small-12 large-4 columns">Discover, Stash, and Share Asian TV dramas.</h1>
+    <div class="hide-for-small-only large-8">&nbsp;</div>
+  </div>
+<div class="row">
+  <div class="login_form small-12 large-5 large-centered columns">
+  <h3>Login</h3>
   <div ng-if="login.error" role="alert">{{login.error}}</div>
   <form name="loginForm" role="form" ng-submit="login.onSubmit()" novalidate>
     <div class="form-group" ng-class="{ 'has-error' : loginForm.username.$invalid && !loginForm.username.$pristine }">
@@ -18,7 +24,8 @@
 
     <div>
       <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-primary">Login</button>
-      <a ui-sref="register" class="btn btn-link">Register</a>
+      <a ui-sref="register" class="btn btn-link">Sign Up</a>
     </div>
   </form>
+  </div>
 </div>
