Adjust display of list show

--- a/app/assets/templates/fav-list-show.html
+++ b/app/assets/templates/fav-list-show.html
@@ -27,9 +27,9 @@
   </div>
 </div> -->
 
-<div class="row small-up-1 medium-up-3 large-up-4 push_down">
+<div class="row small-up-1 medium-up-3 large-up-4 pinch_down pinch_right">
   <div>
-    <h3> {{faves.name}} </h3>
+    <h3> Top 5 </h3>
     <h4>Description:</h4>
     <p> {{faves.description}} </p>
   </div>
