--- a/app/assets/templates/list-show.html
+++ b/app/assets/templates/list-show.html
@@ -1,4 +1,4 @@
-<div class="push_down">
+<div class="pinch_down">
   <div ng-if="list.authorized()">
     <h3 editable-text="list.name" onaftersave="list.updateName(list.name)">{{list.name}}</h3>
     <h4>
