--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -8,29 +8,27 @@
   	  </div>
       <div class="small-12 large-6 columns">&nbsp;</div>
     </div> -->
-	<div class="row">
-    <div class="small-12 columns" ng-repeat= "item in index.featured" >
-      <h2>{{item.list}}</h2>
-      <div class="row small-up-2 medium-up-3 large-up-4">
-        <div ng-repeat= "drama in item.dramas" class="column drama-cards" ng-cloak>
-          <div class="card">
-            <toast></toast>
-            <div class="card-image">
-              <fave-drama ng-if="index.user" drama="drama" user-id="{{index.user.id}}"></fave-drama>
-              <a id="drama-thumbnail-link" ui-sref="drama({dramaID: drama.id})"><img src="{{drama.image_url}}" alt="{{drama.poster_file_name}}">
-              </a>
-              <add-drama ng-if="index.user" drama="drama"
-                user="{{index.user.id}}"
-                user-lists="index.userLists"
-                selected-list="index.selectedList">
-              </add-drama>
-            </div>
-            <div class="drama_card_name">
-              <a ui-sref="drama({dramaID: drama.id})"><span class="title">{{drama.name}}</span></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+	<div class="feature-section" ng-repeat= "item in index.featured">
+	  <h2>{{item.list}}</h2>
+	  <div class="row small-up-2 medium-up-3 large-up-4">
+	    <div ng-repeat= "drama in item.dramas" class="column drama-cards" ng-cloak>
+	      <div class="card">
+	        <toast></toast>
+	        <div class="card-image">
+	          <fave-drama ng-if="index.user" drama="drama" user-id="{{index.user.id}}"></fave-drama>
+	          <a id="drama-thumbnail-link" ui-sref="drama({dramaID: drama.id})"><img src="{{drama.image_url}}" alt="{{drama.poster_file_name}}">
+	          </a>
+	          <add-drama ng-if="index.user" drama="drama"
+	            user="{{index.user.id}}"
+	            user-lists="index.userLists"
+	            selected-list="index.selectedList">
+	          </add-drama>
+	        </div>
+	        <div class="drama_card_name">
+	          <a ui-sref="drama({dramaID: drama.id})"><span class="title">{{drama.name}}</span></a>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
   </div>
 </div>
