--- a/app/assets/templates/search-results.html
+++ b/app/assets/templates/search-results.html
@@ -24,7 +24,7 @@
           <div class="card">
             <div class="card-image">
               <a ui-sref="cast({castID: cast.id})">
-                <img src="{{cast.image_url}}" alt="{{cast.poster_file_name}}">
+                <img src="{{cast.image_url}}" alt="{{cast.picture_file_name}}">
               </a>
             </div>
             <div class="drama_card_name">
