--- a/app/assets/stylesheets/05-dramas/drama-show.scss
+++ b/app/assets/stylesheets/05-dramas/drama-show.scss
@@ -39,72 +39,80 @@
   max-height: inherit;
 }
 
-/* CAST SECTION */
 #cast_block{
-  padding-left: 5%;
-  overflow:hidden;
-  width: 80%;
-  margin:0 auto;
 
-}
-.cast_roll:after{
-  content:"";
-  display:block;
-  clear:both;
-}
-#cast_block div{
-  padding-left: 4%;
-  position:relative;
-  width:27.85714285714286%; /* = (100-2.5) / 3.5 */
-  padding-bottom: 3%;
-  float:left;
-  overflow:hidden;
-  visibility:hidden;
-
-  -webkit-transform: rotate(-60deg) skewY(30deg);
-  -ms-transform: rotate(-60deg) skewY(30deg);
-  transform: rotate(-60deg) skewY(30deg);
-}
-#cast_block div:nth-child(3n+2){
-  margin:0 1%;
-}
-#cast_block div:nth-child(6n+4){
-  margin-left:0.5%;
-}
-#cast_block div:nth-child(6n+4), #cast_block div:nth-child(6n+5), #cast_block div:nth-child(6n+6) {
-	margin-top: -6.9285714285%;
-  margin-bottom: -6.9285714285%;
-
-  -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-  -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-  transform: translateX(50%) rotate(-60deg) skewY(30deg);
-}
-#cast_block div:nth-child(6n+4):last-child, #cast_block div:nth-child(6n+5):last-child, #cast_block div:nth-child(6n+6):last-child{
-  margin-bottom:0%;
-}
-#cast_block div *{
-  position: relative;
-  visibility:visible;
+  img{
+    max-width: 100%;
+    border-radius: 5%;
+  }
 }
 
-#cast_block div img{
-  -webkit-transform: skewY(-30deg) rotate(60deg);
-  -ms-transform: skewY(-30deg) rotate(60deg);
-  transform: skewY(-30deg) rotate(60deg);
-  margin:0 auto;
-  padding: 5%;
-  border-radius: 50%;
-}
-
-#cast_block div span {
-  padding:1% 1%;
-  margin-top: 25%;
-  margin-left: -54%;
-  color: #222;
-  display: block;
-  font-family: 'Roboto Condensed', sans-serif;
-  -webkit-transform: skewY(-30deg) rotate(90deg);
-  -ms-transform: skewY(-30deg) rotate(60deg);
-  transform: skewY(-30deg) rotate(60deg);
-  -webkit-backface-visibility:hidden;
-}
+/* CAST SECTION */
+// #cast_block{
+//   padding-left: 5%;
+//   overflow:hidden;
+//   width: 80%;
+//   margin:0 auto;
+//
+// }
+// .cast_roll:after{
+//   content:"";
+//   display:block;
+//   clear:both;
+// }
+// #cast_block div{
+//   padding-left: 4%;
+//   position:relative;
+//   width:27.85714285714286%; /* = (100-2.5) / 3.5 */
+//   padding-bottom: 3%;
+//   float:left;
+//   overflow:hidden;
+//   visibility:hidden;
+//
+//   -webkit-transform: rotate(-60deg) skewY(30deg);
+//   -ms-transform: rotate(-60deg) skewY(30deg);
+//   transform: rotate(-60deg) skewY(30deg);
+// }
+// #cast_block div:nth-child(3n+2){
+//   margin:0 1%;
+// }
+// #cast_block div:nth-child(6n+4){
+//   margin-left:0.5%;
+// }
+// #cast_block div:nth-child(6n+4), #cast_block div:nth-child(6n+5), #cast_block div:nth-child(6n+6) {
+// 	margin-top: -6.9285714285%;
+//   margin-bottom: -6.9285714285%;
+//
+//   -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+//   -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+//   transform: translateX(50%) rotate(-60deg) skewY(30deg);
+// }
+// #cast_block div:nth-child(6n+4):last-child, #cast_block div:nth-child(6n+5):last-child, #cast_block div:nth-child(6n+6):last-child{
+//   margin-bottom:0%;
+// }
+// #cast_block div *{
+//   position: relative;
+//   visibility:visible;
+// }
+//
+// #cast_block div img{
+//   -webkit-transform: skewY(-30deg) rotate(60deg);
+//   -ms-transform: skewY(-30deg) rotate(60deg);
+//   transform: skewY(-30deg) rotate(60deg);
+//   margin:0 auto;
+//   padding: 5%;
+//   border-radius: 50%;
+// }
+//
+// #cast_block div span {
+//   padding:1% 1%;
+//   margin-top: 25%;
+//   margin-left: -54%;
+//   color: #222;
+//   display: block;
+//   font-family: 'Roboto Condensed', sans-serif;
+//   -webkit-transform: skewY(-30deg) rotate(90deg);
+//   -ms-transform: skewY(-30deg) rotate(60deg);
+//   transform: skewY(-30deg) rotate(60deg);
+//   -webkit-backface-visibility:hidden;
+// }
