--- a/app/assets/templates/drama-show.html
+++ b/app/assets/templates/drama-show.html
@@ -60,10 +60,10 @@
     </div>
     <div class="hide-for-small-only large-5 columns cast_section">
       <h3 ng-if="drama.casts.length > 0">Cast</h3>
-      <div id="cast_block" class="row medium-up-3 cast_roll">
+      <div id="cast_block" class="row medium-up-3 large-up-4 cast_roll">
         <div class="column" ng-repeat="cast in drama.casts">
           <a ui-sref="cast({castID: cast.id})">
-            <img src="{{cast.image_url}}" alt="{{cast.poster_file_name}}">
+            <img src="{{cast.image_url}}" alt="{{cast.picture_file_name}}">
             <span>{{cast.name}}</span>
           </a>
         </div>
