Make landing page four columns

--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -10,7 +10,7 @@
     </div> -->
 	<div class="feature-section" ng-repeat= "item in index.featured">
 	  <h2>{{item.list}}</h2>
-	  <div class="row small-up-2 medium-up-3 large-up-5">
+	  <div class="row small-up-2 medium-up-4">
 	    <div ng-repeat= "drama in item.dramas" class="column drama-cards" ng-cloak>
 	      <div class="card">
 	        <toast></toast>
